# core-ui

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README-en.md  README.md  UI_CORE_API.md  llms.txt  version.json
.github/workflows/: deploy-pages.yml
demo/: app.cpp  app.ui  font_api_demo.cpp  font_demo.cpp
demo/lang/: en.lang  zh-CN.lang
docs/: ai-guide.md  c-api.md  controls.md  debug-simulation.md  design-system.md  getting-started.md  i18n.md  layout.md  markup.md
include/: plugin_api.h  ui_core.h
src/: version.rc.in
src/ui/: animation.cpp  builder.h  context_menu.cpp  context_menu.h  controls.cpp  controls.h  image_view_gdi.cpp  image_view_gdi.h  renderer.cpp  renderer.h  theme.h  ui.h  ui_api.cpp  ui_context.cpp  ui_context.h  ui_debug.cpp  ui_window.cpp  ui_window.h  widget.cpp  widget.h
src/ui/markup/: markup.cpp  markup_builder.cpp  markup_parser.cpp
test/: CMakeLists.txt
test/src/: bitmap_memory_test.cpp  d2d_wic_direct_test.cpp  heap_optimize_test.cpp  layout_test.cpp  markup_test.cpp  wic_load_test.cpp
website/: index.html
website/src/: App.tsx
website/src/components/: CodeBlock.tsx  Header.tsx  SearchDialog.tsx  Sidebar.tsx
website/src/data/: ai-skill.ts  api-functions.ts
website/src/i18n/: en.ts  zh-CN.ts
website/src/pages/: ControlDetail.tsx  GettingStarted.tsx  Home.tsx  LayoutDoc.tsx  Markup.tsx
